-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 21, 23
-
Component/s: hotspot
-
b03
-
riscv
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8324154 | 22.0.1 | Olga Mikhaltcova | P4 | Resolved | Fixed | b02 |
| JDK-8322658 | 21.0.3 | Gui Cao | P4 | Resolved | Fixed | b01 |
| JDK-8322705 | 17.0.11 | Gui Cao | P4 | Resolved | Fixed | b01 |
The test pass if changing NUM_TESTS to 3, like:
diff --git a/test/hotspot/jtreg/runtime/Unsafe/InternalErrorTest.java b/test/hotspot/jtreg/runtime/Unsafe/InternalErrorTest.java
index fcf48a7a2d7..49e83c88db6 100644
--- a/test/hotspot/jtreg/runtime/Unsafe/InternalErrorTest.java
+++ b/test/hotspot/jtreg/runtime/Unsafe/InternalErrorTest.java
@@ -61,7 +61,7 @@ public class InternalErrorTest {
private static final String failureMsg1 = "InternalError not thrown";
private static final String failureMsg2 = "Wrong InternalError: ";
- private static final int NUM_TESTS = 4;
+ private static final int NUM_TESTS = 3;
public static void main(String[] args) throws Throwable {
Unsafe unsafe = Unsafe.getUnsafe();
- backported by
-
JDK-8322658 test runtime/Unsafe/InternalErrorTest.java timeout on linux-riscv64 platform
-
- Resolved
-
-
JDK-8322705 test runtime/Unsafe/InternalErrorTest.java timeout on linux-riscv64 platform
-
- Resolved
-
-
JDK-8324154 test runtime/Unsafe/InternalErrorTest.java timeout on linux-riscv64 platform
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/9a43e9fb
-
Commit
openjdk/jdk21u-dev/7927315f
-
Commit
openjdk/jdk22u/e27e5998
-
Commit
openjdk/jdk/e8768ae0
-
Review
openjdk/jdk17u-dev/2078
-
Review
openjdk/jdk21u-dev/79
-
Review
openjdk/jdk22u/24
-
Review
openjdk/jdk/17103