8321972: test runtime/Unsafe/InternalErrorTest.java timeout on linux-riscv64 platform